# django-qos

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.rst  requirements-tests.txt  runtests.py  setup.cfg
django_qos/: __init__.py  apps.py  qos.py  runners.py  settings.py  signals.py  utils.py
django_qos/db/: __init__.py  apps.py  middlewares.py  models.py  signals.py  views.py
django_qos/db/management/commands/: qos_clean.py
django_qos/db/migrations/: 0001_initial.py  0002_requestresult.py
django_qos/db/tests/: factories.py  test_signals.py  test_views.py
django_qos/management/commands/: qos.py
django_qos/sites/: apps.py  models.py  qos.py  signals.py
django_qos/sites/tests/: test_qos.py
django_qos/templates/django_qos/: report_mail.html  report_mail.txt
django_qos/templates/django_qos_db/: testresult_list.html
django_qos/tests/: test_qos.py  test_signals.py  test_utils.py
django_qos/tests/testproject/: db.sqlite3
django_qos/tests/testproject/testapp/: qos.py
django_qos/tests/testproject/testproject/: settings.py  urls.py
