[metadata]
name = django-qos
url = attr: django_qos.__url__ 
version = attr: django_qos.__version__
license = attr: django_qos.__license__
license_file = LICENSE
description = attr: django_qos.__doc__
long_description = file: README.rst
long_description_content_type = text/x-rst
author = attr: django_qos.__author__
author_email = attr: django_qos.__email__
install_requires =
platforms =
  Linux
  macOS
  Windows
keywords =
  django
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Web Environment
  Environment :: Console
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Database
  Topic :: Scientific/Engineering
  
project_urls =
  Code = attr: django_qos.__url__

[options]
packages = find:
zip_safe = false
install_requires =

[bdist_wheel]
python-tag = py3

[coverage:run]
branch = True
include = django_qos/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
omit =
    .*

[tool:pytest]
setenv = 
   D:DJANGO_SETTINGS_MODULE=django_qos.tests.testproject.testproject.settings
